--- a/src/default/index.scss
+++ b/src/default/index.scss
@@ -9,16 +9,16 @@
 @use 'media-queries.default' as *;
 @use 'grid.default' as *;
 @use 'sass:map';
+@use '../../lib/sass-door' as *;
 
 // - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
 // CSS Building
 // - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
 // CSS Building using this library has important order implications. Mixins that affect the root must be placed first always.
 :root {
-  @include build-color-variables($palette);
+  @include build-theme($palette, 'mota', 'obsidiana');
+  // @include build-entire-palette($palette);
 }
-@include build-color-backgrounds($palette);
-@include build-color-text($palette);
 // Media queries
 @include build-queries($query-map);
 // Grid
