--- a/src/index.scss
+++ b/src/index.scss
@@ -5,6 +5,7 @@
 //
 // =====================================================================================================
 
+@forward 'reset';
 @forward 'color';
 @forward 'grid';
 @forward 'media-queries';
